# todo-app-phase2-fullstack

./: .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_CHECKLIST.md  FINAL_TEST_RESULTS.md  INTEGRATION_COMPLETE.md  PHASE2_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TESTING_RESULTS.md  docker-compose.yml  project-structure.txt
.spec-kit/: config.yaml
backend/: .env.example  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  railway.json  render.yaml  schemas.py
backend/routes/: health.py  tasks.py
frontend/: .env.local.example  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  middleware.ts  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/signin/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: Footer.tsx  Logo.tsx  Navbar.tsx
frontend/components/auth/: AuthForm.tsx
frontend/components/tasks/: AddTaskButton.tsx  AddTaskModal.tsx  DeleteConfirmDialog.tsx  EditTaskModal.tsx  EmptyState.tsx  LoadingState.tsx  TaskFilter.tsx  TaskItem.tsx  TaskList.tsx
frontend/components/ui/: Button.tsx  Checkbox.tsx  Input.tsx  Modal.tsx  Textarea.tsx
frontend/lib/: api.ts  auth-client.ts  auth.ts  simple-auth.ts
frontend/types/: index.ts
specs/: overview.md
specs/api/: rest-endpoints.md
specs/database/: schema.md
specs/features/: authentication.md  task-crud.md
specs/ui/: components.md  pages.md
